# sequelles

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT.md  README.md  berger.toml
.github/workflows/: codeql.yml  rust.yaml
src/: lib.rs
src/databases/sqlite/: mod.rs  pool.rs
src/databases/sqlite/database/: mod.rs  pool.rs
src/datastructures/: as_hashmap.rs  mod.rs  ranking.rs
src/datastructures/joins/: join_collection.rs  join_relation.rs  join_result.rs  many_to_many_join.rs  many_to_zero_join.rs  mod.rs  zero_to_many_join.rs
src/datastructures/joins/many_to_many_join/: entity.rs  iterator.rs  mod.rs  relations.rs
src/datastructures/joins/zero_to_many_join/: mod.rs  row.rs
src/datastructures/rowid_map/: mod.rs
src/tables/: mod.rs  table.rs
src/tables/traits/: has_rowid.rs  mod.rs
