[package]
name = "sequelles"
description = "Bunch of utilities to deal with SQLx data. Very opinionated"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["RustyNova"]
license = "MIT OR AGPL-3.0-or-later"
keywords = ["sqlx", "database", "data-structure", "development"]
repository = "https://github.com/RustyNova016/sequelles"

[dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "sqlite"] }